test/files/neg/t7605-deprecation.scala
abstract class Foo {
  def this(i: Int) { this() }
  def bar {}
  def baz
}