test/files/neg/t7605-deprecation.check
t7605-deprecation.scala:2: warning: Procedure syntax is deprecated. Convert procedure to method by adding `: Unit =`.
  def this(i: Int) { this() }
                   ^
t7605-deprecation.scala:3: warning: Procedure syntax is deprecated. Convert procedure to method by adding `: Unit =`.
  def bar {}
          ^
t7605-deprecation.scala:4: warning: Procedure syntax is deprecated. Convert procedure to method by adding `: Unit`.
  def baz
         ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
